Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2447

TS crashed with "NONE predicate can not be pushed into key"

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.8.0, 1.7.2
    • None

    Description

      tserver crashes on Scan when [lowerPrimaryKey, upperPrimary) and predicates of primary column do not overlap.

      Example of table in TestScannerMultiTablet unittest, The table like this:

      key1 (string) | key2 (string) | value (string)

      The data layout ends up like this:

      tablet '', '1': no rows
      tablet '1', '2': '111', '122', '133'
      tablet '2', '3': '211', '222', '233'
      tablet '3', '': '311', '322', '333'

      add Scan PrimaryKeyBounds: ['12', '13')

      add Scan Predicate: key2 <= '1'

      Run the example, ts will crash, and print "NONE predicate can not be pushed into key"

       

       

      Attachments

        Activity

          People

            oclarms Xu Yao
            oclarms Xu Yao
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: