KUDU-2447 Fix TS crashed with "NONE predicate can not be pushed into key"

tserver crashes on Scan when [lowerPrimaryKey, upperPrimary)
 and predicates of primary column do not overlap

Change-Id: I02810d651e14768f0a85044b0b7f01fa7246c718
Reviewed-on: http://gerrit.cloudera.org:8080/10514
Tested-by: Kudu Jenkins
Reviewed-by: Dan Burkert <danburkert@apache.org>
(cherry picked from commit c7918e87bf1aeb25d5b08f7b340d1ae15806568d)
Reviewed-on: http://gerrit.cloudera.org:8080/10963
Reviewed-by: Todd Lipcon <todd@apache.org>